[package]
name = "camrobot-mqtt"
version = "0.1.0"
authors = ["takashima <tajamaru.tararirara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.7.3"
rppal = "0.11.3"
tokio = { version = "0.2", features = ["io-util", "tcp", "dns", "stream", "sync", "time"] }
rumq-client = "0.1.0-alpha.6"
futures-util = { version =  "0.3", features = ["sink"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full", "macros"] }